--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
     clip-path: polygon(0 11%, 100% 0%, 100% 100%, 0 100%);
     /*transform: skewY(-2deg);*/
 }
+
 /*footer*/
 .footer{
     margin-top: 15px;
@@ -69,7 +70,7 @@ ul a{
     /* display: flex;
     justify-content: center;
     align-items: center;
-*/}
+*//}
 .pages{
 padding-top: 25px;
 }
